--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.0",
+    "@angular/cdk": "^18.1.2",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
@@ -18,6 +19,15 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "bootstrap": "^5.3.3",
+    "classlist.js": "^1.1.20150312",
+    "google-libphonenumber": "^3.2.37",
+    "intl-tel-input": "^23.6.1",
+    "jquery": "^3.7.1",
+    "ngx-intl-tel-input": "^3.2.0",
+    "popper.js": "^1.16.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
