--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "scarfSettings": {
+    "enabled": false
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.0",
@@ -24,7 +27,8 @@
     "google-libphonenumber": "^3.2.37",
     "intl-tel-input": "^23.6.1",
     "jquery": "^3.7.1",
-    "ngx-intl-tel-input": "^3.2.0",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^12.0.0",
     "popper.js": "^1.16.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.5",
